# cs4012-lab1

./: LICENSE  README.md  cs4012-lab1.cabal  index.html
app/: Main.hs
src/: Shapes.hs
