name:                cs4012-lab1
version:             0.1.0.1
synopsis:            Web SVG builder
description:         Please see README.md
homepage:            https://github.com/22a/cs4012-lab1#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Meehan
maintainer:          meehanp2@tcd.ie
copyright:           2016 Peter Meehan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shapes
  build-depends:       base >= 4.7 && < 5
                     , matrix
  default-language:    Haskell2010

executable cs4012-lab1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cs4012-lab1
                     , matrix
                     , blaze-svg
                     , scotty
                     , text
                     , base64-string
  default-language:    Haskell2010

test-suite cs4012-lab1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cs4012-lab1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/22a/cs4012-lab1
